fixed text align

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -115,6 +115,7 @@
 }
 .aqi {
   font-size: 0.9rem;
+  text-align: left;
 }
 .weather-by-hour-container {
   width: 100%;
